# grackle

GPU_tests/: Makefile  parallel_performance.txt  parallel_region_test.c  parallel_region_test_cpu  parallel_region_test_gpu  parallel_region_test_serial  run_cpu_test.slurm  run_gpu_test.slurm
GPU_tests/.old/: Makefile  Makefile-eric  gpu_performance.slurm  parallel_performance.txt  parallel_performance__BACKUP.txt  parallel_region_test  parallel_region_test.c
GPU_tests/Eric/: Makefile  eric-gpu-test  eric-gpu-test.c  run_eric_gpu_test.slurm
GPU_tests/ParallelRegionTest/: Makefile  parallel_performance.txt  parallel_region_test.c  parallel_region_test_cpu  parallel_region_test_serial  run_cpu_test.slurm  run_gpu_test.slurm  run_serial_test.slurm
GPU_tests/testGPU/: run_testGPU.slurm  testGPU  testGPU.c  timings.txt
src/clib/: Make.config.assemble  Make.config.objects  Make.config.settings  Make.config.targets  Makefile  auto_get_version.c  auto_show_config.c  auto_show_flags.c  calc_rates_g_c.c  calc_tdust_1d.c  calc_tdust_1d_g.F  calc_tdust_3d.c  calc_tdust_3d_g.F  calculate_dust_temperature.c  colh2diss_g_c.c  cool1d_cloudy_g.F  cool1d_multi_g.F  cool_multi_time_g.F  dust_evol.def  dust_evol.h  grackle.h  grackle_chemistry_data.h  grackle_chemistry_data_fields.def  grackle_fortran_interface.def  grackle_types.h  initialize_chemistry_data.c  phys_const.def  phys_constants.h  set_default_chemistry_parameters.c  solve_chemistry.c  solve_rate_cool_g.F
src/example/: Makefile  (+9 more)
src/test/: CMakeLists.txt  Make.config.targets  contiguous_looping  contiguous_looping.c
(+15 files in other folders)
